--- a/index.html
+++ b/index.html
@@ -15,15 +15,6 @@
     <title>Frontend Mentor | Profile card component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <div class="card">
@@ -34,6 +25,7 @@
           <h3>Victor Crest<span>26</span></h3>
           <span class="location">London</span>
         </div>
+        <div class="divider"></div>
         <div class="stats">
           <div class="stat">
             <h3>80K</h3>
